import { DataTypes } from 'sequelize';
import sequelize from '../config/database.js';
import bcrypt from 'bcryptjs';

const User = sequelize.define('User', {
  id: {
    type: DataTypes.INTEGER,
    primaryKey: true,
    autoIncrement: true,
  },
  full_name: {
    type: DataTypes.STRING,
    allowNull: false,
  },
  email: {
    type: DataTypes.STRING,
    allowNull: false,
    unique: true,
    validate: {
      isEmail: true,
    },
  },
  password_hash: {
    type: DataTypes.STRING,
    allowNull: false,
  },
  phone_number: {
    type: DataTypes.STRING,
    allowNull: true,
  },
  role: {
    type: DataTypes.STRING,
    allowNull: false,
    defaultValue: 'customer',
  },
  preferred_currency: {
    type: DataTypes.STRING,
    allowNull: false,
    defaultValue: 'EUR',
  },
  hotel_id: {
    type: DataTypes.INTEGER,
    allowNull: true,
  },
  security_question_1: {
    type: DataTypes.STRING,
    allowNull: true,
  },
  security_answer_1_hash: {
    type: DataTypes.STRING,
    allowNull: true,
  },
  security_question_2: {
    type: DataTypes.STRING,
    allowNull: true,
  },
  security_answer_2_hash: {
    type: DataTypes.STRING,
    allowNull: true,
  },
  password_reset_token: {
    type: DataTypes.STRING,
    allowNull: true,
  },
  password_reset_expires: {
    type: DataTypes.DATE,
    allowNull: true,
  },
  failed_recovery_attempts: {
    type: DataTypes.INTEGER,
    defaultValue: 0,
  },
  recovery_locked_until: {
    type: DataTypes.DATE,
    allowNull: true,
  },
  created_at: {
    type: DataTypes.DATE,
    allowNull: false,
    defaultValue: DataTypes.NOW,
  },
  updated_at: {
    type: DataTypes.DATE,
    allowNull: false,
    defaultValue: DataTypes.NOW,
  },
}, {
  tableName: 'users',
  timestamps: true,
  createdAt: 'created_at',
  updatedAt: 'updated_at',
});

// Helper method to compare passwords
User.prototype.verifyPassword = async function (password) {
  return bcrypt.compare(password, this.password_hash);
};

export default User;
